--- a/index.html
+++ b/index.html
@@ -1,3 +1,203 @@
-<p>
-    Amazon-clone
-</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amazon</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="navbar">
+            <div class="navbar-logo border">
+                <div class="logo"></div>
+            </div>
+            <div class="navbar-address border">
+                <p class="add-deliever">Deliver to</p>
+                <div class="add-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="add-country">India</p>
+                </div>
+            </div>
+            <div class="navbar-search">
+                <select class="select">
+                    <option>All</option>
+                </select>
+                <input type="text" placeholder="Search Amazon" class="input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <div class="navbar-signin border">
+                <p><span>Hello, sign in</span></p>
+                <p class="account">Account & Lists</p>
+            </div>
+            <div class="navbar-return border">
+                <p><span>Returns</span></p>
+                <p class="account">& Orders</p>
+            </div>
+            <div class="navbar-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
+        </div>
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="pnl-options">
+                <p>Today's Deals</p>
+                <p>Registry</p>
+                <p>Customer Service</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="pnl-deal">
+                Shop deals in Electronics
+            </div>
+        </div>
+    </header>
+
+    <div class="hero-banner">
+        <div class="message">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local
+                delivery. <a>Click here to go to amazon.in</a></p>
+        </div>
+    </div>
+
+    <div class="shop-section">
+        <div class="content">
+            <div class="box-content">
+                <h2>Toys under $25</h2>
+                <div class="box-img" style="background-image: url('images/box_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url('images/box2_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="box-content">
+                <h2>Deals in PCs</h2>
+                <div class="box-img" style="background-image: url('images/box3_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="box-content">
+                <h2>Deals in Smart Phones</h2>
+                <div class="box-img" style="background-image: url('images/box4_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="box-content">
+                <h2>Beauty Picks</h2>
+                <div class="box-img" style="background-image: url('images/box5_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="box-content">
+                <h2>Deals on shoes</h2>
+                <div class="box-img" style="background-image: url('images/box6_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="box-content">
+                <h2>Shop holiday gift guides</h2>
+                <div class="box-img" style="background-image: url('images/box7_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="box-content">
+                <h2>Shop deals in Fashion</h2>
+                <div class="box-img" style="background-image: url('images/box8_image.jpg');">
+                </div>
+                <p>See more</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="foot-pnl1">
+            Back to Top
+        </div>
+        <div class="foot-pnl2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a>Investor Relations</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Make Money with Us</p>
+                <a>Sell products on Amazon</a>
+                <a>Sell on Amazon Business</a>
+                <a>Sell apps on Amazon</a>
+                <a>Become an Affiliate</a>
+                <a>Advertise Your Products</a>
+                <a>Self-Publish with Us</a>
+                <a>Host an Amazon Hub</a>
+                <a>See More Make Money with Us</a>
+            </ul>
+            <ul>
+                <p>Amazon Payment Products</p>
+                <a>Amazon Business Card</a>
+                <a>Shop with Points</a>
+                <a>Reload Your Balance</a>
+                <a>Amazon Currency Converter</a>
+            </ul>
+            <ul>
+                <p>Let Us Help You</p>
+                <a>Amazon and COVID-19</a>
+                <a>Your Account</a>
+                <a>Your Orders</a>
+                <a>Shipping Rates & Policies</a>
+                <a>Returns & Replacements</a>
+                <a>Manage Your Content and Devices</a>
+                <a>Amazon Assistant</a>
+                <a>Help</a>
+            </ul>
+        </div>
+
+        <div class="foot-pnl3">
+            <div class="logo">
+            </div>
+        </div>
+        <div class="foot-pnl4">
+            <div class="pages">
+                <a>Conditions of Use</a>
+                <a>Privacy Notice</a>
+                <a>Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyRight">
+                © 1996-2023, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
